--- a/home.html
+++ b/home.html
@@ -8,149 +8,131 @@
 		<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
 		<title>Ricky Chen</title>
 	</head>
 	<body>
 		<div id="page" class="container containerOveride">
-			<div class="row">
-				<!-- Nav Bar Start -->
-				<nav class="navbar navbar-expand-lg navbar-light bg-light col col-lg-12">
-					<a class="navbar-brand" href="#">Welcome!</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav mr-auto">
-							<li class="nav-item">
-								<a class="nav-link" href="#aboutmesection">About Me</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#edusection">Education</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#skillsection">Skills</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#awardclubsection">Award/Clubs</a>
-							</li>
-							<div class="dropdown-divider"></div>
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									Misc
-								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Download Resume</a>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</nav>
+			<!-- Nav Bar Start -->
+			<nav class="navbar navbar-expand-lg navbar-light bg-light col col-lg-12">
+				<a class="navbar-brand" href="#">Welcome!</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="#aboutmesection">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#edusection">Education</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#skillsection">Skills</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#awardclubsection">Award/Clubs</a>
+						</li>
+						<div class="dropdown-divider"></div>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Misc
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Download Resume</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</nav>
 				<!-- Nav Bar End -->
-			</div>
-			<div class="row">
-				<div style="position:relative;" class="paraRow test2 parallax col col-lg-12 col-sm-12">
-					<div class="row">
-						<div class="col-3">
-1
-						</div>
-						<div class="col-6 headShotMainDiv fadeInEffect" style="float:right;">
-							<div class="row">
-								<div class="leftPii">
-									<a href="https://www.linkedin.com/in/ricky-chen-2b24b562">
-										<img class="sendToBottom sendToLeftHeadshot headShotPic" src="https://i.imgur.com/dFtxIHG.jpg" />
-									</a>
-								</div>
-								<div class="rightPii">
-									<div class="sendToBottom piiBackground ml-auto">
-										<div class="mainPiiDiv">
-											<div class="piiSizingName headerFont fadeInEffect">
-												Ricky Chen
-											</div>
-											<div  class="piiSizingInfo RokkittFont">
-												<Span class="piiInfoHeader">Major:<br/></Span>
-												BS in Computer Science<br/>
-												<Span class="piiInfoHeader">City:<br/></Span>
-												San Francisco, California<br/>
-												<Span class="piiInfoHeader">Email:<br/></Span>
-												rickychen10@gmail.com<br/>
-												<Span class="piiInfoHeader">Telephone:<br /></Span>
-												(415) 608-4948<br/><br/>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-3">
-
-						</div>
-					</div>
-				<!--	<div style="position:absolute;"  class="col col-lg-3 col-sm-12 float-right">
-
-						<div class="row">
-							<div class="col">
-
-							</div>
-							<div class="col">
-								<a class="thumbnail" href="https://www.linkedin.com/in/ricky-chen-2b24b562">
-									<img src="https://i.imgur.com/dFtxIHG.jpg" />
-								</a>
-							</div>
-							<div class="topInfoText float-right col">
-								<div class="mesectionname headerNameSize headerFont">
-									Ricky Chen
-								</div>
-								<div  class="headerDescSize RokkittFont">
-									BS in Computer Science<br/>
-									San Francisco, California<br/><br/>
-									rickychen10@gmail.com<br/><br/>
-									(415) 608-4948<br/><br/>
-								</div>
-							</div>
-						</div>
-
-
-				</div> -->
-				</div>
-
-				<div class="row">
-					<div class="col-sm-12">
-						<img class="mobileNoParallax" style="display:none" src="https://images.unsplash.com/photo-1457030642598-b037296c9296?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0cee8af04565ee4de4477cb5dcbabf8&auto=format&fit=crop&w=750&q=80" height="42" width="42">
-					</div>
-				</div>
-			</div>
-
-			<div class="mobileMeSection row" style="display:none">
-				<div class="col-sm-12" style="width:100%">
-					<div class="mobilepfinfo">
-						<div class="img-thumbnail center">
-							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img style="margin-top:20px" src="https://i.imgur.com/unXrwuh.png" /> </a>
-						</div>
-						<div class="mobileheaderNameSize headerFont">
-							Ricky Chen
-						</div>
-						<div  class="mobileheaderDescSize RokkittFont">
-							BS in Computer Science<br/>
-							San Francisco, California<br/><br/>
-							rickychen10@gmail.com<br/><br/>
-							(415) 608-4948<br/><br/>
-						</div>
-					</div>
-				</div>
-			</div><!-- kdjfljsf-->
-			<div class="row">
-				<div id="aboutmesection" class="aboutmeblock col col-lg-12">
-					<div class="infoHeaderSize headerFont">
-						About Me:
-					</div>
-					<hr />
-					<div class="infoDescSize RokkittFont">
-						My name is Ricky. <br />
-						When I am not working, I enjoy watching sports and fitness. <br />
+			<section class="parallax text-white d-flex justify-content-center align-items-center">
+				<div class="container text-center text-bottom">
+			      <h1 class="display-1 text-primary text-uppercase">Ricky Chen</h1>
+			      <p class="display-4 d-none d-sm-block">BS in Computer Science</p>
+			      <p class="lead">San Francisco, California</p>
+			      <p class="lead">Email: rickychen10@gmail.com</p>
+				  <p class="lead">(415) 608-4948</p>
+			    </div>
+			</section>
+			<div class="container">
+				<section>
+					<h2 class="display-4 text-center">About Me:</h2>
+					<p>
+						My name is Ricky.
+						When I am not working, I enjoy watching sports and fitness.
 						I am currently working in the Digital Adveristing World.
+					</p>
+				</section>
+				<section>
+					<h2 class="display-4 text-center">Skill:</h2>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
 					</div>
-				</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar" role="progressbar bg-warning" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-success" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
+					</div>
+				</section>
+				<section>
+					<h2 class="display-4 text-center">Projects:</h2>
+					<div id="carousel" class="carousel slide" data-ride="carousel">
+			          <ol class="carousel-indicators">
+			            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+			            <li data-target="#carousel" data-slide-to="1"></li>
+			            <li data-target="#carousel" data-slide-to="2"></li>
+			            <li data-target="#carousel" data-slide-to="3"></li>
+			          </ol>
+			          <div class="carousel-inner" role="listbox">
+			            <div class="carousel-item active">
+			              <img src="https://i.imgur.com/WKtp3tr.png" alt="Slide #1" class="d-block img-fluid">
+			              <div class="carousel-caption">
+			                <h3 class="display-4">At night</h3>
+			                <p>Use Cameo at night when going out with friends.</p>
+			              </div>
+			            </div>
+			            <div class="carousel-item">
+			              <img src="https://i.imgur.com/XRU70ns.png" alt="Slide #2" class="d-block img-fluid">
+			              <div class="carousel-caption">
+			                <h3 class="display-4">Outside</h3>
+			                <p>Use Cameo outside when hiking in the nature.</p>
+			              </div>
+			            </div>
+			            <div class="carousel-item">
+			              <img src="https://i.imgur.com/0TkIxSh.png" alt="Slide #3" class="d-block img-fluid">
+			              <div class="carousel-caption">
+			                <h3 class="display-4">In the sun</h3>
+			                <p>Use Cameo even with strong and direct sun.</p>
+			              </div>
+			            </div>
+			            <div class="carousel-item">
+			              <img src="https://i.imgur.com/mUkARML.png" alt="Slide #4" class="d-block img-fluid">
+			              <div class="carousel-caption">
+			                <h3 class="display-4">In the distance</h3>
+			                <p>Use Cameo to take clear photos of objects far away.</p>
+			              </div>
+			            </div>
+			          </div>
+			          <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
+			            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			            <span class="sr-only">Previous</span>
+			          </a>
+			          <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
+			            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			            <span class="sr-only">Next</span>
+			          </a>
+			        </div>
+				</section>
 			</div>
+
 			<div class="row">
 				<div id="edusection" class="edublock col col-lg-12">
 					<div class="infoHeaderSize headerFont">
