--- a/home.html
+++ b/home.html
@@ -22,16 +22,13 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="#aboutmesection">About Me</a>
+							<a class="nav-link" href="#sectionTopInfo">Info</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#edusection">Education</a>
+							<a class="nav-link" href="#sectionSkillBar">Skills</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#skillsection">Skills</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#awardclubsection">Award/Clubs</a>
+							<a class="nav-link" href="#sectionProjectSlide">Projects</a>
 						</li>
 						<div class="dropdown-divider"></div>
 						<li class="nav-item dropdown">
@@ -47,7 +44,7 @@
 			</nav>
 				<!-- Nav Bar End -->
 			<section class="parallax text-white d-flex justify-content-center align-items-center">
-				<div class="container text-center text-bottom fadeInEffect">
+				<div class="container text-center text-bottom fadeInEffect7">
 			      <h1 class="display-1 text-primary text-uppercase">Ricky Chen</h1>
 			      <p class="display-4 d-none d-sm-block">BS in Computer Science</p>
 			      <p class="lead">San Francisco, California</p>
@@ -56,15 +53,28 @@
 			    </div>
 			</section>
 			<div class="container">
-
-				<section>
-				  <h2 class="display-4 text-center">Hmm</h2>
-
+				<section id="sectionTopInfo">
+				  <!--<ul class="list-group">
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
+			    </ul>-->
 				  <div class="row">
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5">
+					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect12">
 					  <div class="h1"><i class="fa fa-graduation-cap mb-4 text-info" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Education</h3>
-					  <p>
+					  <p class="text-center">
 						  UC Riverside 2015<br />
 						  Bachelor of Science in Computer Science <br />
 					  </p>
@@ -77,10 +87,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5">
+					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect16">
 					  <div class="h1"><i class="fa fa-award mb-4 text-info" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Awards</h3>
-					  <p>
+					  <p class="text-center">
 						 Hearst Autos 2018 First Mover Award - Stellar Performance
 					  </p>
 				 <!--	  <button id="project1ModalBtn" class="btn btn-dark btn-lg">Details...</button>-->
@@ -92,7 +102,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5">
+					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect20">
 					  <div class="h1"><i class="fa fa-sitemap mb-4 text-info" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Clubs</h3>
 					  <p>
@@ -111,159 +121,87 @@
 				  </div>
 				</section>
 
-
-
-
-				<section>
-				  <h2 class="display-4 text-center">Information</h2>
-				  <div class="row">
-					<div class="col-12 col-md-4 mb-4">
-					  <div class="card card-outline-success">
-						<div class="card-header bg-success text-white text-center">
-						  <h2>Education</h2>
-						</div>
-						<div class="card-body">
-						  <p class="card-text text-center">
-							  UC Riverside 2015<br />
-	  						  Bachelor of Science in Computer Science <br />
-						  </p>
-						</div>
-						<!--<ul class="list-group">
-						  <li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
-						  <li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
-					  </ul>-->
-						<div class="card-footer text-center">
-						  <button id="project1ModalBtn" class="btn btn-success btn-lg">Class Taken</button>
-							<div class="row">
-								<div id="project1Modal" class="modal">
-									<div class="modal-content">
-										<span class="close">&times;</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					  </div>
-					</div>
-					<div class="col-12 col-md-4 mb-4">
-					  <div class="card card-outline-success">
-						<div class="card-header bg-info text-white text-center">
-						  <h2>Awards</h2>
-						</div>
-						<div class="card-body">
-						  <p class="card-text text-center">Hearst Autos 2018 First Mover Award - Stellar Performance</p>
-						</div>
-						<div class="card-footer text-center">
-						  <a href="#" class="btn btn-info btn-lg">Extra Details</a>
-						</div>
-					  </div>
-					</div>
-					<div class="col-12 col-md-4 mb-4">
-					  <div class="card card-outline-success">
-						<div class="card-header bg-dark text-white text-center">
-						  <h2>Clubs</h2>
-						</div>
-						<div class="card-body">
-						  <p class="card-text text-center">Association for Computing Machinery</p>
-						  <p class="card-text text-center">Pi Kappa Alpha Fraternity</p>
-						</div>
-						<div class="card-footer text-center">
-						  <a href="#" class="btn btn-dark btn-lg">Extra Details</a>
-						</div>
-					  </div>
-					</div>
-				  </div>
-				</section>
-				<section>
+				<section id="sectionSkillBar">
 					<h2 class="display-4 text-center">Skill:</h2>
-					<div class="progress skillmargin">
-						<div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
-					</div>
-					<div class="progress skillmargin">
-						<div class="progress-bar" role="progressbar bg-warning" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div>
-					</div>
-					<div class="progress skillmargin">
-						<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div>
-					</div>
-					<div class="progress skillmargin">
-						<div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div>
-					</div>
-					<div class="progress skillmargin">
-						<div class="progress-bar bg-success" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
+					<div class="fadeInEffect20">
+						<div class="progress skillmargin">
+							<div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
+						</div>
+						<div class="progress skillmargin">
+							<div class="progress-bar" role="progressbar bg-warning" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div>
+						</div>
+						<div class="progress skillmargin">
+							<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div>
+						</div>
+						<div class="progress skillmargin">
+							<div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div>
+						</div>
+						<div class="progress skillmargin">
+							<div class="progress-bar bg-success" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
+						</div>
 					</div>
 				</section>
-				<section>
+				<section id="sectionProjectSlide">
 					<h2 class="display-4 text-center">Projects:</h2>
-					<div id="carousel" class="carousel slide" data-ride="carousel">
-			          <ol class="carousel-indicators">
-			            <li data-target="#carousel" data-slide-to="0" class="active"></li>
-			            <li data-target="#carousel" data-slide-to="1"></li>
-			            <li data-target="#carousel" data-slide-to="2"></li>
-			            <li data-target="#carousel" data-slide-to="3"></li>
-			          </ol>
-			          <div class="carousel-inner" role="listbox">
-			            <div class="carousel-item active">
-			              <img src="https://i.imgur.com/WKtp3tr.png" alt="Slide #1" class="d-block img-fluid">
-			              <div class="carousel-caption">
-			                <h3 class="display-4">Project 1</h3>
-			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-			              </div>
-			            </div>
-			            <div class="carousel-item">
-			              <img src="https://i.imgur.com/XRU70ns.png" alt="Slide #2" class="d-block img-fluid">
-			              <div class="carousel-caption">
-							  <h3 class="display-4">Project 2</h3>
-  			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-			              </div>
-			            </div>
-			            <div class="carousel-item">
-			              <img src="https://i.imgur.com/0TkIxSh.png" alt="Slide #3" class="d-block img-fluid">
-			              <div class="carousel-caption">
-							  <h3 class="display-4">Project 3</h3>
-   						   <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-			              </div>
-			            </div>
-			            <div class="carousel-item">
-			              <img src="https://i.imgur.com/mUkARML.png" alt="Slide #4" class="d-block img-fluid">
-			              <div class="carousel-caption">
-							  <h3 class="display-4">Project 4</h3>
-  			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-			              </div>
-			            </div>
-			          </div>
-			          <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
-			            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			            <span class="sr-only">Previous</span>
-			          </a>
-			          <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
-			            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			            <span class="sr-only">Next</span>
-			          </a>
-			        </div>
+						<div id="carousel" class="carousel slide fadeInEffect20" data-ride="carousel">
+				          <ol class="carousel-indicators">
+				            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+				            <li data-target="#carousel" data-slide-to="1"></li>
+				            <li data-target="#carousel" data-slide-to="2"></li>
+				            <li data-target="#carousel" data-slide-to="3"></li>
+				          </ol>
+				          <div class="carousel-inner" role="listbox">
+				            <div class="carousel-item active">
+				              <img src="https://i.imgur.com/WKtp3tr.png" alt="Slide #1" class="d-block img-fluid">
+				              <div class="carousel-caption">
+				                <h3 class="display-4">Project 1</h3>
+				                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+				              </div>
+				            </div>
+				            <div class="carousel-item">
+				              <img src="https://i.imgur.com/XRU70ns.png" alt="Slide #2" class="d-block img-fluid">
+				              <div class="carousel-caption">
+								  <h3 class="display-4">Project 2</h3>
+	  			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+				              </div>
+				            </div>
+				            <div class="carousel-item">
+				              <img src="https://i.imgur.com/0TkIxSh.png" alt="Slide #3" class="d-block img-fluid">
+				              <div class="carousel-caption">
+								  <h3 class="display-4">Project 3</h3>
+	   						   <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+				              </div>
+				            </div>
+				            <div class="carousel-item">
+				              <img src="https://i.imgur.com/mUkARML.png" alt="Slide #4" class="d-block img-fluid">
+				              <div class="carousel-caption">
+								  <h3 class="display-4">Project 4</h3>
+	  			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+				              </div>
+				            </div>
+				          </div>
+				          <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
+				            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				            <span class="sr-only">Previous</span>
+				          </a>
+				          <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
+				            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				            <span class="sr-only">Next</span>
+				          </a>
+				        </div>
 				</section>
 			</div>
 		</div>
 			<footer class="bg-light">
 				<div class="container py-3 py-sm-5">
 					<div class="row">
-						<div class="col-12 col-sm-6 col-lg-3">
+						<div class="col-3 col-sm-6 col-lg-3">
 							<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f float-right contactIcon"></i></a>
 						</div>
-						<div class="col-12 col-sm-6 col-lg-3">
+						<div class="col-3 col-sm-6 col-lg-3">
 							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in float-right contactIcon"></i></a>
 						</div>
-						<div class="col-12 col-sm-6 col-lg-3">
+						<div class="col-3 col-sm-6 col-lg-3">
 							<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope float-right contactIcon"></i></a>
 						</div>
 					</div>
