--- a/home.html
+++ b/home.html
@@ -217,7 +217,7 @@
 				</div>
 			</footer>
 			<!-- Class Taken Modal -->
-			<script>
+		<!--	<script>
 				var modalBtn = document.getElementById('project1ModalBtn');
 				var modal = document.getElementById('project1Modal');
 				var modalSpan = document.getElementsByClassName("close")[0];
@@ -232,7 +232,7 @@
 						modal.style.display = "none";
 					}
 				}
-			</script>
+			</script>-->
 		<!-- Bootstrap -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
