--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 		<title>Ricky Chen</title>
 	</head>
 	<body>
-		<div id="page" class="container containerOveride">
+		<div class="container containerOveride">
 			<!-- Nav Bar Start -->
 			<nav class="navbar bg-primary navbar-dark navbar-expand-md fixed-top">
 				<a class="navbar-brand" href="#">Welcome!</a>
@@ -43,7 +43,7 @@
 				</div>
 			</nav>
 				<!-- Nav Bar End -->
-			<section class="parallax text-white d-flex justify-content-center align-items-center">
+			<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
 				<div class="container text-center text-bottom fadeInEffect7">
 			      <h1 class="display-1 text-primary text-uppercase">Ricky Chen</h1>
 			      <p class="display-4 d-none d-sm-block">BS in Computer Science</p>
@@ -52,26 +52,54 @@
 				  <p class="lead">(415) 608-4948</p>
 			    </div>
 			</section>
-			<div class="container">
-				<section id="sectionTopInfo">
-				  <!--<ul class="list-group">
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
-			  	  <li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
-			    </ul>-->
-				  <div class="row">
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect12">
+			<section class="parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride" id="sectionSkillBar">
+				<div class="row">
+					<div class="col-12">
+						<div class="container text-center text-bottom fadeInEffect7">
+					      <h1 class="display-5 text-primary text-uppercase">Professional:</h1>
+					      <p class="display-6 d-none d-sm-block">My Skill Level Breakdown</p>
+					    </div>
+					</div>
+					<div class="col-12">
+						<div class="fadeInEffect20">
+							<div class="progress skillmargin">
+								<div class="progress-bar bg-success" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="skillBarPercent">42%</span>
+							</div>
+							<div class="progress skillmargin">
+								<div class="progress-bar" role="progressbar bg-warning" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div> <span class="skillBarPercent">50%</span>
+							</div>
+							<div class="progress skillmargin">
+								<div class="progress-bar bg-success" role="progressbar" style="width: 83%;" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div> <span class="skillBarPercent">83%</span>
+							</div>
+							<div class="progress skillmargin">
+								<div class="progress-bar bg-info" role="progressbar" style="width: 68%;" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div> <span class="skillBarPercent">68%</span>
+							</div>
+							<div class="progress skillmargin">
+								<div class="progress-bar bg-success" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div> <span class="skillBarPercent">42%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="parallaxBottom" id="sectionTopInfo">
+			  <!--<ul class="list-group">
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
+		  	  <li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
+		    </ul>-->
+				<div class="row">
+					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect12 topper">
 					  <div class="h1"><i class="fa fa-graduation-cap mb-4 text-info" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Education</h3>
 					  <p class="text-center">
@@ -87,7 +115,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect16">
+					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect16 topper">
 					  <div class="h1"><i class="fa fa-award mb-4 text-info" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Awards</h3>
 					  <p class="text-center">
@@ -102,7 +130,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect20">
+					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect20 topper">
 					  <div class="h1"><i class="fa fa-sitemap mb-4 text-info" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Clubs</h3>
 					  <p>
@@ -118,80 +146,58 @@
 							</div>
 						</div>
 					</div>
-				  </div>
-				</section>
-
-				<section id="sectionSkillBar">
-					<h2 class="display-4 text-center">Skill:</h2>
-					<div class="fadeInEffect20">
-						<div class="progress skillmargin">
-							<div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
-						</div>
-						<div class="progress skillmargin">
-							<div class="progress-bar" role="progressbar bg-warning" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div>
-						</div>
-						<div class="progress skillmargin">
-							<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div>
-						</div>
-						<div class="progress skillmargin">
-							<div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div>
-						</div>
-						<div class="progress skillmargin">
-							<div class="progress-bar bg-success" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
-						</div>
+					<div class="col-12 d-flex flex-column align-items-center mb-5">
+						<h2 class="display-4 text-center">Projects:</h2>
+						 <div id="carousel" class="carousel slide" data-ride="carousel">
+						   <ol class="carousel-indicators">
+							 <li data-target="#carousel" data-slide-to="0" class="active"></li>
+							 <li data-target="#carousel" data-slide-to="1"></li>
+							 <li data-target="#carousel" data-slide-to="2"></li>
+							 <li data-target="#carousel" data-slide-to="3"></li>
+						   </ol>
+						   <div class="carousel-inner" role="listbox">
+							 <div class="carousel-item active">
+							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #1" class="d-block img-fluid">
+							   <div class="carousel-caption">
+								 <h3 class="display-4">Project 1</h3>
+								 <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+							   </div>
+							 </div>
+							 <div class="carousel-item">
+							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #2" class="d-block img-fluid">
+							   <div class="carousel-caption">
+								   <h3 class="display-4">Project 2</h3>
+								 <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+							   </div>
+							 </div>
+							 <div class="carousel-item">
+							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #3" class="d-block img-fluid">
+							   <div class="carousel-caption">
+								   <h3 class="display-4">Project 3</h3>
+								<p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+							   </div>
+							 </div>
+							 <div class="carousel-item">
+							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #4" class="d-block img-fluid">
+							   <div class="carousel-caption">
+								   <h3 class="display-4">Project 4</h3>
+								 <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
+							   </div>
+							 </div>
+						   </div>
+						   <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
+							 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							 <span class="sr-only">Previous</span>
+						   </a>
+						   <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
+							 <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							 <span class="sr-only">Next</span>
+						   </a>
+						 </div>
 					</div>
-				</section>
-				<section id="sectionProjectSlide">
-					<h2 class="display-4 text-center">Projects:</h2>
-						<div id="carousel" class="carousel slide fadeInEffect20" data-ride="carousel">
-				          <ol class="carousel-indicators">
-				            <li data-target="#carousel" data-slide-to="0" class="active"></li>
-				            <li data-target="#carousel" data-slide-to="1"></li>
-				            <li data-target="#carousel" data-slide-to="2"></li>
-				            <li data-target="#carousel" data-slide-to="3"></li>
-				          </ol>
-				          <div class="carousel-inner" role="listbox">
-				            <div class="carousel-item active">
-				              <img src="https://i.imgur.com/WKtp3tr.png" alt="Slide #1" class="d-block img-fluid">
-				              <div class="carousel-caption">
-				                <h3 class="display-4">Project 1</h3>
-				                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-				              </div>
-				            </div>
-				            <div class="carousel-item">
-				              <img src="https://i.imgur.com/XRU70ns.png" alt="Slide #2" class="d-block img-fluid">
-				              <div class="carousel-caption">
-								  <h3 class="display-4">Project 2</h3>
-	  			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-				              </div>
-				            </div>
-				            <div class="carousel-item">
-				              <img src="https://i.imgur.com/0TkIxSh.png" alt="Slide #3" class="d-block img-fluid">
-				              <div class="carousel-caption">
-								  <h3 class="display-4">Project 3</h3>
-	   						   <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-				              </div>
-				            </div>
-				            <div class="carousel-item">
-				              <img src="https://i.imgur.com/mUkARML.png" alt="Slide #4" class="d-block img-fluid">
-				              <div class="carousel-caption">
-								  <h3 class="display-4">Project 4</h3>
-	  			                <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-				              </div>
-				            </div>
-				          </div>
-				          <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
-				            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				            <span class="sr-only">Previous</span>
-				          </a>
-				          <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
-				            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				            <span class="sr-only">Next</span>
-				          </a>
-				        </div>
-				</section>
+				</div>
+			</section>
 			</div>
-		</div>
 			<footer class="bg-light">
 				<div class="container py-3 py-sm-5">
 					<div class="row">
