changed info icon color

--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
 		    </ul>-->
 				<div class="row">
 					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect12 topper">
-					  <div class="h1"><i class="fa fa-graduation-cap mb-4 text-info" aria-hidden="true"></i></div>
+					  <div class="h1"><i class="fa fa-graduation-cap text-secondary mb-4" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Education</h3>
 					  <p class="text-center">
 						  UC Riverside 2015<br />
@@ -119,7 +119,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect16 topper">
-					  <div class="h1"><i class="fa fa-award mb-4 text-info" aria-hidden="true"></i></div>
+					  <div class="h1"><i class="fa fa-award text-secondary mb-4" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Awards</h3>
 					  <p class="text-center">
 						 Hearst Autos 2018 First Mover Award - Stellar Performance
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect20 topper">
-					  <div class="h1"><i class="fa fa-sitemap mb-4 text-info" aria-hidden="true"></i></div>
+					  <div class="h1"><i class="fa fa-sitemap text-secondary mb-4" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Clubs</h3>
 					  <p>
 						  <p class="text-center">Association for Computing Machinery</p>
